--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -318,6 +318,9 @@
 			img {
 				width: 48px;
 				height: 48px;
+				-ms-transform: rotate(90deg); /* IE 9 */
+				-webkit-transform: rotate(90deg); /* Safari 3-8 */
+				transform: rotate(90deg);
 			}
 		}
 
